zurag ner solison

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
           <h6 class="desti">Destination of Our Agency</h6>
           <div class="ngu-buurunhii">
             <div class="buurunhii">
-              <img src="Sukhbaatar-Square.jpg" class="suhee" />
+              <img src="Sukhbaatar-Square.png" class="suhee" />
               <div class="ug">D1</div>
             </div>
             <div class="zuraas"></div>
@@ -61,7 +61,7 @@
 
           <div class="marg">
             <div class="buurunhii">
-              <img src="Khorgo.jpg" class="horgo" />
+              <img src="Khorgo.png" class="horgo" />
               <div class="ug">D3</div>
             </div>
             <div class="zuraas"></div>
@@ -71,7 +71,7 @@
 
           <div class="marg">
             <div class="buurunhii">
-              <img src="terkh.jpeg" class="terh" />
+              <img src="terkh.png" class="terh" />
               <div class="ug">D4</div>
             </div>
             <div class="zuraas"></div>
@@ -91,7 +91,7 @@
 
           <div class="marg">
             <div class="buurunhii">
-              <img src="Sukhbaatar-Square.jpg" class="suhee2" />
+              <img src="Sukhbaatar-Square.png" class="suhee2" />
               <div class="ug">D6</div>
             </div>
             <div style="margin-top: 40px">
