--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
           <div class="marg">
             <div class="buurunhii">
-              <img src="Khorgo.png" class="horgo" />
+              <img src="Khorgo.jpg" class="horgo" />
               <div class="ug">D3</div>
             </div>
             <div class="zuraas"></div>
